--- a/_data/nav-research.yml
+++ b/_data/nav-research.yml
@@ -4,28 +4,29 @@
 
 -
   name: Achtergrond
-  permalink: /scope
+  permalink: /scope/
 
 -
   name: Kwalitatief onderzoek
-  permalink: /kwalitatief
+  permalink: /kwalitatief/
 
 -
   name: Kwantitatief onderzoek
-  permalink: /kwantitatief
+  permalink: /kwantitatief/
 
 -
-  name: Inzichten 1e
-  permalink: /inzichten-1
+  name: Inzichten 1e jaar
+  permalink: /inzichten-1/
 
 -
-  name: Inzichten 2e
-  permalink: /inzichten-2
+  name: Inzichten 2e en 3e jaar
+  permalink: /inzichten-2/
+
 
 -
   name: Ideeën tot verbetering
-  permalink: /verbetering
+  permalink: /verbetering/
 
 -
   name: Het team
-  permalink: /team
+  permalink: /team/
