--- a/_data/nav-research.yml
+++ b/_data/nav-research.yml
@@ -15,13 +15,8 @@
   permalink: /kwantitatief/
 
 -
-  name: Inzichten 1e jaar
-  permalink: /inzichten-1/
-
--
-  name: Inzichten 2e en 3e jaar
-  permalink: /inzichten-2/
-
+  name: Inzichten
+  permalink: /inzichten/
 
 -
   name: Ideeën tot verbetering
