--- a/_data/nav-research.yml
+++ b/_data/nav-research.yml
@@ -7,6 +7,10 @@
   permalink: /scope/
 
 -
+  name: Methodologie
+  permalink: /methodologie/
+
+-
   name: Kwalitatief onderzoek
   permalink: /kwalitatief/
 
