--- a/_data/nav-research.yml
+++ b/_data/nav-research.yml
@@ -23,6 +23,10 @@
   permalink: /inzichten/
 
 -
+  name: How might we...
+  permalink: /hmw/
+
+-
   name: Ideeën tot verbetering
   permalink: /verbetering/
 
